--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,63 +5,63 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
+  - {name: 🇨🇦 加拿大-998.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇺🇸 美国-730.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
+  - {name: 🇨🇳 中国-2.84MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
   - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: s100.boom.party, port: 19000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 343767:3StTW5, obfs-param: download.windowsupdate.com}
-  - {name: 🇺🇸 美国-520.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
-  - {name: 🇨🇳 中国-467.7KB/s(Youtube:不良林), server: cn01.downloadmovie.cn, port: 65033, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn01.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-633.6KB/s(Youtube:不良林), server: 116.129.254.177, port: 65034, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇦 加拿大-897.6KB/s(Youtube:不良林), server: 72.140.224.195, port: 802, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-298.7KB/s(Youtube:不良林), server: auto-moble.downloadmovie.cn, port: 65022, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: auto-moble.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-2.28MB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-3.27MB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇨🇳 中国-284.6KB/s(Youtube:不良林), server: cn04.downloadmovie.cn, port: 65036, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn04.downloadmovie.cn}}
-  - {name: 🇯🇵 日本-386.6KB/s(Youtube:不良林), server: 194.156.231.237, port: 811, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇨🇳 中国-233.4KB/s(Youtube:不良林), server: twa1.apolo.icu, port: 14443, type: trojan, password: af24f2d4-6273-4712-ad7c-494ce99ff65c, sni: twa1.apolo.icu, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-6.44MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd2.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.37MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: gzyd1.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-217.8KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30180, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: hnyd.52147.top, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-824.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-897.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-897.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-897.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
@@ -72,47 +72,47 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-897.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-897.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-897.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +128,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
+      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
+      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
-      - 🇨🇳 中国-467.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-633.6KB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-897.6KB/s(Youtube:不良林)
-      - 🇨🇳 中国-298.7KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.28MB/s(Youtube:不良林)
-      - 🇨🇳 中国-3.27MB/s(Youtube:不良林)
-      - 🇨🇳 中国-284.6KB/s(Youtube:不良林)
-      - 🇯🇵 日本-386.6KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
+      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
+      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
+      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
+      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
