--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,114 +5,115 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇦 加拿大-998.0KB/s(Youtube:不良林), server: 72.140.224.195, port: 810, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇺🇸 美国-730.4KB/s(Youtube:不良林), server: 38.68.135.18, port: 5500, type: ss, cipher: aes-256-gcm, password: KixLvKzwjekG00rm}
-  - {name: 🇨🇳 中国-2.84MB/s(Youtube:不良林), server: cn05.downloadmovie.cn, port: 65037, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: cn05.downloadmovie.cn}}
+  - {name: 🇳🇱 荷兰-210.3KB/s(Youtube:不良林), server: 213.183.59.229, port: 9046, type: ss, cipher: aes-256-cfb, password: NvS8N4Vf8qAGPSCL}
   - {name: 🇨🇳 中国-2.89MB/s(Youtube:不良林), server: s100.boom.party, port: 19000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 343767:3StTW5, obfs-param: download.windowsupdate.com}
-  - {name: 🇨🇦 加拿大-1.03MB/s(Youtube:不良林), server: 72.140.224.195, port: 803, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
-  - {name: 🇨🇳 中国-233.4KB/s(Youtube:不良林), server: twa1.apolo.icu, port: 14443, type: trojan, password: af24f2d4-6273-4712-ad7c-494ce99ff65c, sni: twa1.apolo.icu, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-6.44MB/s(Youtube:不良林), server: gzyd2.52147.top, port: 30010, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: gzyd2.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-1.37MB/s(Youtube:不良林), server: gzyd1.52147.top, port: 20120, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, sni: gzyd1.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-217.8KB/s(Youtube:不良林), server: hnyd.52147.top, port: 30180, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, sni: hnyd.52147.top, skip-cert-verify: true}
-  - {name: 🇨🇳 中国-824.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-747.1KB/s(Youtube:不良林), server: 38.68.135.18, port: 6697, type: ss, cipher: aes-256-gcm, password: TEzjfAYq2IjtuoS}
+  - {name: 🇨🇦 加拿大-1.57MB/s(Youtube:不良林), server: 72.140.224.195, port: 800, type: ss, cipher: chacha20-ietf-poly1305, password: G!yBwPWH3Vao}
+  - {name: 🇭🇰 香港-2.42MB/s(Youtube:不良林), server: krhqecxyye.eastasia.cloudapp.azure.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: krhqecxyye.eastasia.cloudapp.azure.com, skip-cert-verify: true}
+  - {name: 🇺🇸 美国-842.3KB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-5.74MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-6.34MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-7.30MB/s(Youtube:不良林), server: 103.173.255.127, port: 28443, type: trojan, password: 09553aee-5191-4870-a312-51d053ea668b, skip-cert-verify: true}
+  - {name: 🇻🇳 越南-6.60MB/s(Youtube:不良林), server: 103.173.255.127, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
 proxy-groups:
   - name: 🔰 节点选择
     type: select
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-210.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.60MB/s(Youtube:不良林)
   - name: ♻️ 自动选择
     type: url-test
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-210.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.60MB/s(Youtube:不良林)
   - name: 🌍 国外媒体
     type: select
     proxies:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-210.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.60MB/s(Youtube:不良林)
   - name: 🌏 国内媒体
     type: select
     proxies:
       - 🎯 全球直连
+      - 🇭🇰 香港-2.42MB/s(Youtube:不良林)
       - 🔰 节点选择
   - name: Ⓜ️ 微软服务
     type: select
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-210.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.60MB/s(Youtube:不良林)
   - name: 📲 电报信息
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-210.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.60MB/s(Youtube:不良林)
   - name: 🍎 苹果服务
     type: select
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-210.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.60MB/s(Youtube:不良林)
   - name: 🎯 全球直连
     type: select
     proxies:
@@ -128,16 +129,16 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇦 加拿大-998.0KB/s(Youtube:不良林)
-      - 🇺🇸 美国-730.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-2.84MB/s(Youtube:不良林)
+      - 🇳🇱 荷兰-210.3KB/s(Youtube:不良林)
       - 🇨🇳 中国-2.89MB/s(Youtube:不良林)
-      - 🇨🇦 加拿大-1.03MB/s(Youtube:不良林)
-      - 🇨🇳 中国-233.4KB/s(Youtube:不良林)
-      - 🇨🇳 中国-6.44MB/s(Youtube:不良林)
-      - 🇨🇳 中国-1.37MB/s(Youtube:不良林)
-      - 🇨🇳 中国-217.8KB/s(Youtube:不良林)
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
+      - 🇺🇸 美国-747.1KB/s(Youtube:不良林)
+      - 🇨🇦 加拿大-1.57MB/s(Youtube:不良林)
+      - 🇭🇰 香港-2.42MB/s(Youtube:不良林)
+      - 🇺🇸 美国-842.3KB/s(Youtube:不良林)
+      - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.34MB/s(Youtube:不良林)
+      - 🇻🇳 越南-7.30MB/s(Youtube:不良林)
+      - 🇻🇳 越南-6.60MB/s(Youtube:不良林)
 rules:
  - DOMAIN-SUFFIX,local,🎯 全球直连
  - IP-CIDR,192.168.0.0/16,🎯 全球直连,no-resolve
