--- a/EasyClash.yaml
+++ b/EasyClash.yaml
@@ -5,11 +5,11 @@ mode: Rule
 log-level: info
 external-controller: :9090
 proxies:
-  - {name: 🇨🇳 中国-824.4KB/s(Youtube:不良林), server: cm.spacez.cloud, port: 30002, type: trojan, password: c9a3a61d-5d49-4158-9e60-6fa32684b122, sni: cm.spacez.cloud, skip-cert-verify: true}
-  - {name: 🇺🇸 美国-3.88MB/s(Youtube:不良林), server: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, port: 443, type: trojan, password: trojan-daozhu-uallen-qbit-azure-hk, sni: trojan-daozhu-uallen-qbit-azure-hk.kinhproxy.com, skip-cert-verify: true}
+  - {name: 🇨🇳 中国-1.23MB/s(Youtube:不良林), server: 120.233.150.146, port: 65024, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 120.233.150.146}}
   - {name: 🇨🇳 中国-2.14MB/s(Youtube:不良林), server: 116.129.254.177, port: 65007, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
-  - {name: 🇨🇳 中国-161.8KB/s(Youtube:不良林), server: best04.downloadmovie.cn, port: 65065, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: best04.downloadmovie.cn}}
-  - {name: 🇺🇸 美国-520.2KB/s(Youtube:不良林), server: 38.68.135.18, port: 8090, type: ss, cipher: aes-256-gcm, password: PCnnH6SQSnfoS27}
+  - {name: 🇨🇳 中国-259.5KB/s(Youtube:不良林), server: 116.129.254.177, port: 65048, type: vmess, uuid: 0253b574-8020-3186-a647-0267295ac9bb, alterId: 0, cipher: auto, tls: false, skip-cert-verify: true, network: ws, ws-path: /rocket, ws-headers: {Host: 116.129.254.177}}
+  - {name: 🇨🇳 中国-2.35MB/s(Youtube:不良林), server: opt11.boom.party, port: 21000, type: ssr, cipher: aes-256-cfb, password: Uk92CS, protocol: auth_aes128_sha1, obfs: http_simple, protocol-param: 343767:3StTW5, obfs-param: download.windowsupdate.com}
+  - {name: 🇺🇸 美国-1.63MB/s(Youtube:不良林), server: s1.hazz.win, port: 12340, type: trojan, password: dfbf0d67-f03d-4184-a224-c2d64a571f99, sni: s1.hazz.win, skip-cert-verify: true}
   - {name: 🇺🇸 美国-260.3KB/s(Youtube:不良林), server: us-01.licom.ml, port: 8443, type: trojan, password: ce433528-39fa-4711-bc0d-25a5b1579574, sni: us-01.licom.ml, skip-cert-verify: true}
   - {name: 🇻🇳 越南-5.74MB/s(Youtube:不良林), server: 103.173.255.21, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
   - {name: 🇻🇳 越南-6.56MB/s(Youtube:不良林), server: 103.173.255.234, port: 28000, type: trojan, password: 7da84a56-a1e2-48f3-a690-374a3973d7e8, skip-cert-verify: true}
@@ -21,11 +21,11 @@ proxy-groups:
     proxies:
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
@@ -36,11 +36,11 @@ proxy-groups:
     url: http://www.gstatic.com/generate_204
     interval: 300
     proxies:
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
@@ -52,11 +52,11 @@ proxy-groups:
       - 🔰 节点选择
       - ♻️ 自动选择
       - 🎯 全球直连
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
@@ -72,11 +72,11 @@ proxy-groups:
     proxies:
       - 🎯 全球直连
       - 🔰 节点选择
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
@@ -87,11 +87,11 @@ proxy-groups:
     proxies:
       - 🔰 节点选择
       - 🎯 全球直连
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
@@ -103,11 +103,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
@@ -128,11 +128,11 @@ proxy-groups:
       - 🔰 节点选择
       - 🎯 全球直连
       - ♻️ 自动选择
-      - 🇨🇳 中国-824.4KB/s(Youtube:不良林)
-      - 🇺🇸 美国-3.88MB/s(Youtube:不良林)
+      - 🇨🇳 中国-1.23MB/s(Youtube:不良林)
       - 🇨🇳 中国-2.14MB/s(Youtube:不良林)
-      - 🇨🇳 中国-161.8KB/s(Youtube:不良林)
-      - 🇺🇸 美国-520.2KB/s(Youtube:不良林)
+      - 🇨🇳 中国-259.5KB/s(Youtube:不良林)
+      - 🇨🇳 中国-2.35MB/s(Youtube:不良林)
+      - 🇺🇸 美国-1.63MB/s(Youtube:不良林)
       - 🇺🇸 美国-260.3KB/s(Youtube:不良林)
       - 🇻🇳 越南-5.74MB/s(Youtube:不良林)
       - 🇻🇳 越南-6.56MB/s(Youtube:不良林)
